[tool.poetry]
name = "rsserpent"
version = "0.1.4-alpha.1"

authors = ["Queensferry <queensferry.me@gmail.com>"]
description = "ðŸ This snake helps you reconnect the Web, with RSS feeds!"
license = "MIT"
readme = "README.md"

homepage = "https://github.com/RSSerpent/RSSerpent"
repository = "https://github.com/RSSerpent/RSSerpent"

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
keywords = ["rss"]


[tool.poetry.dependencies]
python = "^3.6.2"
arrow = "^1.1.1"
importlib-metadata = "^4.5.0"
pydantic = {extras = ["email"], version = "^1.8.2"}
starlette = {extras = ["full"], version = "^0.16.0"}

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
uvicorn = "^0.15.0"
# testing
hypothesis = "^6.21.4"
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.12.1"
pytest-randomly = "^3.10.1"
pytest-xdist = "^2.3.0"
# documentation
mike = "^1.1.0"
mkdocs = "^1.2.1"
mkdocs-git-revision-date-plugin = "^0.3.1"
mkdocs-material = "^7.2.6"
mkdocs-static-i18n = "^0.19"

[tool.black]
include = '\.pyi?$'
target-version = ["py36", "py37", "py38", "py39"]

[tool.coverage.run]
include = ["rsserpent/*"]

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "pragma: no cover"
]

[tool.isort]
balanced_wrapping = true
combine_as_imports = true
lines_after_imports = 2
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
